--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,16 @@
 server.port=8082
 
-#Configurações do Banco de dados
-spring.datasource.url=jdbc:mysql://localhost:3306/ms-locacoes?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=Mak788602!@#$
+spring.datasource.url=jdbc:postgresql://dpg-ckvg7gramefc7389jqk0-a.oregon-postgres.render.com/db_sport_ease
+spring.datasource.username=renderpostgres
+spring.datasource.password=vsEBkTrS2Dfod6Fbe5mbW2hXIKfC67oP
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-#Configurações do Token JWT
 api.security.token.apigateway.secret=${JWT_GATEWAY_SECRET:SENHA_SECRETA_PARA_VALIDAR_API_GATEWAY}
 api.security.token.mslocacoes.secret=${JWT_MS_CADASTRO_SECRET:SENHA_SECRETA_PARA_VALIDAR_MS_LOCACOES}
 
 api.gateway.issuer=API GATEWAY SPORTEASE UFPR
 api.mslocacoes.issuer=MS LOCACOES ISSUER SPORTEASE UFPR
 
-url.ms.cadastros.espacos_esportivos=http://localhost:8081/espacos-esportivos
+url.ms.cadastros.espacos_esportivos=https://ms-cadastros.onrender.com/espacos-esportivos
