--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 server.port=8082
 
-spring.datasource.url=jdbc:postgresql://dpg-ckvg7gramefc7389jqk0-a.oregon-postgres.render.com/db_sport_ease
-spring.datasource.username=renderpostgres
-spring.datasource.password=vsEBkTrS2Dfod6Fbe5mbW2hXIKfC67oP
+spring.datasource.url=${DB_URL_LOCACOES:jdbc:mysql://localhost:3306/credenciais?createDatabaseIfNotExist=true}
+spring.datasource.username=${DB_USER_LOCACOES:root}
+spring.datasource.password=${DB_PASS_LOCACOES:mysql}
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 api.security.token.apigateway.secret=${JWT_GATEWAY_SECRET:SENHA_SECRETA_PARA_VALIDAR_API_GATEWAY}
@@ -13,4 +12,4 @@ api.security.token.mslocacoes.secret=${JWT_MS_CADASTRO_SECRET:SENHA_SECRETA_PARA
 api.gateway.issuer=API GATEWAY SPORTEASE UFPR
 api.mslocacoes.issuer=MS LOCACOES ISSUER SPORTEASE UFPR
 
-url.ms.cadastros.espacos_esportivos=https://ms-cadastros.onrender.com/espacos-esportivos
+url.ms.cadastros.espacos_esportivos=${URL_MS_CADASTROS:http://localhost:8081}/espacos-esportivos
