correção application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8082
 
-spring.datasource.url=${DB_URL_LOCACOES:jdbc:mysql://localhost:3306/credenciais?createDatabaseIfNotExist=true}
-spring.datasource.username=${DB_USER_LOCACOES:root}
-spring.datasource.password=${DB_PASS_LOCACOES:mysql}
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/credenciais?createDatabaseIfNotExist=true}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASS:mysql}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
