--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>ms-locacoes</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ms-locacoes</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Ms locacoes</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
