--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8082
+server.address=0.0.0.0
 
 spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/credenciais?createDatabaseIfNotExist=true}
 spring.datasource.username=${DB_USER:root}
