--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=${PORT:8082}
 
-spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/credenciais?createDatabaseIfNotExist=true}
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/locacoes?createDatabaseIfNotExist=true}
 spring.datasource.username=${DB_USER:root}
 spring.datasource.password=${DB_PASS:mysql}
 spring.jpa.show-sql=true
@@ -12,4 +12,4 @@ api.security.token.mslocacoes.secret=${JWT_MS_CADASTRO_SECRET:SENHA_SECRETA_PARA
 api.gateway.issuer=API GATEWAY SPORTEASE UFPR
 api.mslocacoes.issuer=MS LOCACOES ISSUER SPORTEASE UFPR
 
-url.ms.cadastros.espacos_esportivos=ms-cadastros-production.up.railway.app/espacos-esportivos
+url.ms.cadastros.espacos_esportivos=${URL_MS_CADASTROS:http://localhost:8081}/espacos-esportivos
