Busca de comentários por espaço esportivo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ api.gateway.issuer=API GATEWAY SPORTEASE UFPR
 api.mslocacoes.issuer=MS LOCACOES ISSUER SPORTEASE UFPR
 
 url.ms.cadastros.espacos_esportivos=${URL_MS_CADASTROS:http://localhost:8081}/espacos-esportivos
+url.ms.cadastros.clientes=${URL_MS_CADASTROS:http://localhost:8081}/clientes
