--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ api.mslocacoes.issuer=MS LOCACOES ISSUER SPORTEASE UFPR
 
 url.ms.cadastros.espacos_esportivos=${URL_MS_CADASTROS:http://localhost:8081}/espacos-esportivos
 url.ms.cadastros.clientes=${URL_MS_CADASTROS:http://localhost:8081}/clientes
+url.ms.comunicacoes.notificacoes=${URL_MS_COMUNICACOES:http://localhost:8083}/notificacoes
