--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,11 @@ spring.datasource.password=${DB_PASS:mysql}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-api.security.token.apigateway.secret=${JWT_GATEWAY_SECRET:SENHA_SECRETA_PARA_VALIDAR_API_GATEWAY}
-api.security.token.mslocacoes.secret=${JWT_MS_LOCACOES_SECRET:SENHA_SECRETA_PARA_VALIDAR_MS_LOCACOES}
-api.security.token.mscadastros.secret=${JWT_MS_CADASTRO_SECRET:SENHA_SECRETA_PARA_VALIDAR_MS_CADASTROS}
+api.gateway.secret=${JWT_GATEWAY_SECRET:SENHA_SECRETA_PARA_VALIDAR_API_GATEWAY}
+ms.secret=${JWT_MS_SECRET:SENHA_SECRETA_PARA_VALIDAR_MS}
 
-api.gateway.issuer=API GATEWAY SPORTEASE UFPR
-api.mslocacoes.issuer=MS LOCACOES ISSUER SPORTEASE UFPR
-api.mscadastros.issuer=MS CADASTRO SPORTEASE UFPR
+api.gateway.issuer=${API_GATEWAY_ISSUER:API GATEWAY ISSUER SPORTEASE UFPR}
+ms.issuer=${MS_ISSUER:MS ISSUER SPORTEASE UFPR}
 
 url.ms.cadastros.espacos_esportivos=${URL_MS_CADASTROS:http://localhost:8081}/espacos-esportivos
 url.ms.cadastros.clientes=${URL_MS_CADASTROS:http://localhost:8081}/clientes
