--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,5 @@ ms.secret=${JWT_MS_SECRET:SENHA_SECRETA_PARA_VALIDAR_MS}
 api.gateway.issuer=${API_GATEWAY_ISSUER:API GATEWAY ISSUER SPORTEASE UFPR}
 ms.issuer=${MS_ISSUER:MS ISSUER SPORTEASE UFPR}
 
-url.ms.cadastros.espacos_esportivos=${URL_MS_CADASTROS:http://localhost:8081}/espacos-esportivos
-url.ms.cadastros.clientes=${URL_MS_CADASTROS:http://localhost:8081}/clientes
-url.ms.comunicacoes.notificacoes=${URL_MS_COMUNICACOES:http://localhost:8083}/notificacoes
+url.ms.cadastros=${URL_MS_CADASTROS:http://localhost:8081}
+url.ms.comunicacoes=${URL_MS_COMUNICACOES:http://localhost:8083}
